@@ -371,6 +371,14 @@ typedef int pid_t;
 #if !defined(__GLIBC__) || __GLIBC__ < 2 || (__GLIBC__ == 2 && __GLIBC_MINOR__ < 1)
 typedef int rlim_t;
 #endif
+
+/* Linux 2.0 and above implement the new posix RLIMIT_AS rather than the
+ * older BSD semantics (some would actually call this a bug, like me -djg).
+ */
+#ifndef RLIMIT_VMEM
+#define RLIMIT_VMEM RLIMIT_AS
+#endif
+
 /* flock is faster ... but hasn't been tested on 1.x systems */
 #define USE_FLOCK_SERIALIZED_ACCEPT
 
